--- a/static/products_list.html
+++ b/static/products_list.html
@@ -7,15 +7,14 @@
 		<title>Page Title</title>
 
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="../css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<!-- myself_css -->
-		<link rel="stylesheet" href="../css/base.css">
-		<link rel="stylesheet" href="../css/products_list.css">
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/products_list.css">
 	</head>
 	<body style="">
 		<!-- 头部 -->
-		<header>
-			<iframe src="header.html" frameborder="0" class="header"></iframe>
+		<header id="header">
 		</header>
 		<!-- 主体 -->
 		<hr class="mt-0 line-pink">
@@ -166,16 +165,17 @@
 		</div>
 		
 		<!-- 底部 -->
-		<footer>
-			<iframe src="footer.html" frameborder="0" class="footer"></iframe>
+		<footer id="footer">			
 		</footer>
 		
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="../js/jquery.min.js"></script>
-		<script src="../js/popper.min.js"></script>
-		<script src="../js/bootstrap.min.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/popper.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<!-- myself_js -->
+		<script src="js/header.js"></script>
+		<script src="js/footer.js"></script>
 	</body>
 </html>
