--- a/static/index.html
+++ b/static/index.html
@@ -7,15 +7,14 @@
 		<title>纯纯购—我的极简购物地带</title>
 
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="../css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<!-- myself_css -->
-		<link rel="stylesheet" href="../css/base.css">
-		<link rel="stylesheet" href="../css/index.css">
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/index.css">
 	</head>
 	<body style="">
 		<!-- 头部 -->
-		<header>
-			<iframe src="header.html" frameborder="0" class="header"></iframe>
+		<header id="header">
 		</header>
 		<!-- 主体 -->
 		<div class="container-fluid bg-f5 mid_content" >	
@@ -292,17 +291,18 @@
 			</div>
 		</div>
 		<!-- 底部 -->
-		<footer>
-			<iframe src="footer.html" frameborder="0" class="footer"></iframe>
+		<footer id="footer">
 		</footer>
 		
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="../js/jquery.min.js"></script>
-		<script src="../js/popper.min.js"></script>
-		<script src="../js/bootstrap.min.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/popper.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<!-- myself_js -->
-		<script src="../js/index.js"></script>
+		<script src="js/header.js"></script>
+		<script src="js/footer.js"></script>
+		<script src="js/index.js"></script>
 	</body>
 </html>
