--- a/static/products_women.html
+++ b/static/products_women.html
@@ -7,19 +7,18 @@
 		<title>Page Title</title>
 
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="../css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<!-- myself_css -->
-		<link rel="stylesheet" href="../css/base.css">
-		<link rel="stylesheet" href="../css/products_women.css">
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/products_women.css">
 	</head>
 	<body style="">
 		<!-- 头部 -->
-		<header>
-			<iframe src="header.html" frameborder="0" class="header"></iframe>
+		<header id="header">
 		</header>
 		<!-- 主体 -->
 		<hr  class="mt-0 line-pink">
-	    <div class="container "  >
+	    <div class="container mb-3"  >
 			<div class="row mb-5">
 				<div class="col-md-5 text-center p-2 pt-2">
 					<div id="mask" class="p-absolute d-none"></div>
@@ -373,17 +372,18 @@
 		</div>
 		
 		<!-- 底部 -->
-		<footer>
-			<iframe src="footer.html" frameborder="0" class="footer mt-5"></iframe>
+		<footer id="footer">
 		</footer>
 		
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="../js/jquery.min.js"></script>
-		<script src="../js/popper.min.js"></script>
-		<script src="../js/bootstrap.min.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/popper.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<!-- myself_js -->
-		<script src="../js/products_women.js"></script>
+		<script src="js/header.js"></script>
+		<script src="js/footer.js"></script>
+		<script src="js/products_women.js"></script>
 	</body>
 </html>
