--- a/static/user_login.html
+++ b/static/user_login.html
@@ -7,10 +7,10 @@
 		<title>登录</title>
 
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="../css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<!-- myself_css -->
-		<link rel="stylesheet" href="../css/base.css">
-		<link rel="stylesheet" href="../css/user_login.css">
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/user_login.css">
 	</head>
 	<body>
 		<!-- 头部 -->
@@ -38,18 +38,17 @@
 		</div>
 		
 		<!-- 底部 -->
-		<footer>
-			<iframe src="footer.html" frameborder="0" class="footer"></iframe>
+		<footer id="footer">
 		</footer>
 
 		
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="../js/jquery.min.js"></script>
-		<script src="../js/popper.min.js"></script>
-		<script src="../js/bootstrap.min.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/popper.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<!-- myself_js -->
-		<script src="common.js"></script>
-		<script src="../js/user_login.js"></script>
+		<script src="js/footer.js"></script>
+		<script src="js/user_login.js"></script>
 	</body>
 </html>
