--- a/static/index.html
+++ b/static/index.html
@@ -76,7 +76,7 @@
 						</div >
 						<div class="xianshi_item">
 							<a href="products_women.html" target="_blank">
-								<img src="img/index/xianshi6.png" alt="" class="xianshi_img img-thumbnail">
+								<img src="img/index/xianshi4.png" alt="" class="xianshi_img img-thumbnail">
 								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
 							</a>
@@ -112,7 +112,7 @@
 					<div class="col-lg-2 tuijian_left p-0" >
 						<img src="img/index/spring.png" alt="" class="img-fluid">
 					</div>
-					<div class="col-lg-10 d-flex justify-content-around" >			       													
+					<div class="col-lg-10 d-flex justify-content-around floor_content " >			       													
 						<div class="floor-item">
 							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
@@ -131,7 +131,7 @@
 						</div>
 						<div class="floor-item">
 							<a href="products_women.html" target="_blank">
-								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
+								<img src="img/index/xianshi1.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
 							</a>
@@ -159,7 +159,7 @@
 					<div class="col-lg-2 tuijian_left p-0" >
 						<img src="img/index/summer.png" alt="" class="img-fluid">
 					</div>
-					<div class="col-lg-10 d-flex justify-content-around" >			       													
+					<div class="col-lg-10 d-flex justify-content-around floor_content" >			       													
 						<div class="floor-item">
 							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
@@ -178,7 +178,7 @@
 						</div>
 						<div class="floor-item">
 							<a href="products_women.html" target="_blank">
-								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
+								<img src="img/index/xianshi1.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
 							</a>
@@ -206,7 +206,7 @@
 					<div class="col-lg-2 tuijian_left p-0" >
 						<img src="img/index/autumn.png" alt="" class="img-fluid">
 					</div>
-					<div class="col-lg-10 d-flex justify-content-around" >			       													
+					<div class="col-lg-10 d-flex justify-content-around floor_content" >			       													
 						<div class="floor-item">
 							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
@@ -225,7 +225,7 @@
 						</div>
 						<div class="floor-item">
 							<a href="products_women.html" target="_blank">
-								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
+								<img src="img/index/xianshi1.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
 							</a>
@@ -253,7 +253,7 @@
 					<div class="col-lg-2 tuijian_left p-0" >
 						<img src="img/index/winter.png" alt="" class="img-fluid">
 					</div>
-					<div class="col-lg-10 d-flex justify-content-around" >			       													
+					<div class="col-lg-10 d-flex justify-content-around floor_content" >			       													
 						<div class="floor-item">
 							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
@@ -272,7 +272,7 @@
 						</div>
 						<div class="floor-item">
 							<a href="products_women.html" target="_blank">
-								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
+								<img src="img/index/xianshi1.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
 							</a>
