--- a/static/products_women.html
+++ b/static/products_women.html
@@ -18,9 +18,9 @@
 		</header>
 		<!-- 主体 -->
 		<hr  class="mt-0 line-pink">
-	    <div class="container mb-3"  >
+	    <div class="mid-content mb-3"  >
 			<div class="row mb-5">
-				<div class="col-md-5 text-center p-2 pt-2">
+				<div class="col-xl-4 col-lg-4 text-center p-2">
 					<div id="mask" class="p-absolute d-none"></div>
 					<div class="show_div">
 						<div id='super-mask' class="p-absolute"></div>
@@ -34,7 +34,7 @@
 						<li class="pic_li"><a href=""><img src="img/products_women/p5_small.png" alt="" class="small_pic img-thumbnail" data-md='img/products_women/p5.png' data-lg='img/products_women/p5_big.png'></a></li>
 					</ul>
 				</div>
-				<div class="col-lg-5 col-md-7 p-2 pt-">
+				<div class="col-xl-6 col-lg-8 p-2">
 					<div>
 						<h4>2018夏季新款韩版bf港风学院风polo领T恤裙百搭宽松休闲中长款短袖针织裙连衣裙女夏</h4>
 					</div>
@@ -51,21 +51,21 @@
 					<div class="text-muted pt-3 mt-3">
 						<b class="mr-2">客服:</b><span class="text-small">联系客服</span>
 					</div>
-					<div class="text-muted pt-3 mt-3 " >						
+					<div class="text-muted pt-3 mt-3 " id="color">						
 						<b class="mr-1">颜色:</b>						
-						<a href=""><img src="img/products_women/p2_small.png" alt="" class="color_pic img-thumbnail"></a>
-						<a href=""><img src="img/products_women/p5_small.png" alt="" class="color_pic img-thumbnail"></a>
+						<img src="img/products_women/p2_small.png" alt="" class="color_pic img-thumbnail">
+						<img src="img/products_women/p5_small.png" alt="" class="color_pic img-thumbnail">
 					</div>
-					<div class="d-flex pt-3 mt-3">
+					<div class="d-flex pt-3 mt-3" id="size">
 						<b class="text-muted mr-2">尺码:</b>
-						<ol class="list-unstyled d-flex">
+						<ol class="list-unstyled d-flex" >
 							<li class="size_li mr-2">S</li>
 							<li class="size_li mr-2">M</li>
 							<li class="size_li mr-2">L</li>
 						</ol>
 						<span class="text-muted text-small pt-2">库存10000件</span>
 					</div>
-					<div class="d-flex  w-50  pt-3">
+					<div class="d-flex  w-50  pt-3" id="count">
 						<b class="text-muted mr-2">数量:</b>
 						<button class="count_btn mr-2">-</button>
 						<input type="text" class="count mr-2" value="1">
@@ -84,7 +84,7 @@
 						<img src="img/products_detail/4.png" alt="" class="products_logo">&nbsp;退货补运费
 					</div>
 				</div>
-				<div class="col-lg-2 remai_border mt-1">
+				<div class="col-xl-2 remai_border mt-1">
 					<h6 class="text-muted text-center ">-热卖推荐-</h6>
 					<ul class="list-unstyled  text-center remai_small">
 						<li><a href="" target="_blank"><img src="img/products_women/remai1.png" alt="" class="remai_pic img-thumbnail"></a><p>￥78</p></li>
