--- a/static/products_women.html
+++ b/static/products_women.html
@@ -20,12 +20,12 @@
 		<hr  class="mt-0 line-pink">
 	    <div class="mid-content mb-3"  >
 			<div class="row mb-5">
-				<div class="col-xl-4 col-lg-4 text-center p-2">
+				<div class="col-xl-4 col-lg-5 text-center p-2">
 					<div id="mask" class="p-absolute d-none"></div>
 					<div class="show_div">
 						<div id='super-mask' class="p-absolute"></div>
 						<img src="img/products_women/p4.png" class="img-fluid  img-thumbnail" alt="">	
-					</div class="">
+					</div>
 					<ul class="small_pic_ul d-flex  pt-2 pl-3 justify-content-around">
 						<li class="pic_li"><a href=""><img src="img/products_women/p4_small.png" alt="" class="small_pic img-thumbnail" data-md='img/products_women/p4.png' data-lg='img/products_women/p4_big.png'></a></li>
 						<li class="pic_li "><a href=""><img src="img/products_women/p2_small.png" alt="" class="small_pic img-thumbnail" data-md='img/products_women/p2.png' data-lg='img/products_women/p2_big.png'></a></li>
@@ -34,7 +34,7 @@
 						<li class="pic_li"><a href=""><img src="img/products_women/p5_small.png" alt="" class="small_pic img-thumbnail" data-md='img/products_women/p5.png' data-lg='img/products_women/p5_big.png'></a></li>
 					</ul>
 				</div>
-				<div class="col-xl-6 col-lg-8 p-2">
+				<div class="col-xl-6 col-lg-7 p-2">
 					<div>
 						<h4>2018夏季新款韩版bf港风学院风polo领T恤裙百搭宽松休闲中长款短袖针织裙连衣裙女夏</h4>
 					</div>
@@ -95,7 +95,7 @@
 			</div >
 			<hr class="mb-0">
 			<div class="row ">
-				<div class="col-md-3">
+				<div class="col-lg-3 col-md-4">
 					<div class="row text-center bg-f5">
 						<span class="font-weight-bold" style="line-height:2.5rem;margin: 0 auto;">&尚美衣婷&</span>
 					</div>
@@ -121,7 +121,7 @@
 
 				    </div>				
 				</div>
-				<div class="col-md-6">
+				<div class="col-lg-6 col-md-8">
 					<ul class="nav nav-tabs bg-f5"  >
 						<li class="nav-item"><a href="#detail" class="nav-link active normal_a" data-toggle="tab">商品详情</a></li>
 						<li class="nav-item"><a href="#comment" class="nav-link normal_a" data-toggle="tab">累计评价</a></li>
@@ -301,7 +301,7 @@
 						</div>				
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-lg-3">
 					<div class="row text-center bg-f5">
 						<span class="font-weight-bold haixianggou_title">&购了还想购&</span>
 					</div>												
