--- a/static/user_register.html
+++ b/static/user_register.html
@@ -26,7 +26,7 @@
 			<div id="register" class="register_box text-center  p-3">
 				<h4 style="color:#FF5670 ;" class="">用户注册</h4>
 				<hr>
-				<form method="post" action="/user/add" class="w-75" style="margin: 0px auto;">
+				<form method="post" action="/user/register" class="w-75" style="margin: 0px auto;">
 					<input type="text" name="uname" placeholder="用户名" class="login_input form-control " maxlength="9"><span></span><br>
 					<input type="password" name="upwd" placeholder="密码" class="login_input form-control " maxlength="8"><span></span><br>
 					<input type="password" name="check_upwd" placeholder="确认密码" class="login_input form-control " maxlength="8"><span></span><br>
