--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
 			</div>
 			<!-- 限时抢购 -->
 			<div class="container-fluid mt-3">			
-				<div class="row" id="xianshi">
+				<div class="row" id="xianshi" v-cloak>
 					<div class="col-lg-2 bg-dark qianggou d-flex flex-column justify-content-around">
 						<h5 class="pt-4">限时抢购</h5>
 						<span class="time" id="time" >00:00:00</span>
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 			<!-- 春装推荐 -->
-			<div class="container-fluid pt-4 mt-3" id="spring">			
+			<div class="container-fluid pt-4 mt-3" id="spring" v-cloak>			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&春装推荐&</h5>
@@ -96,7 +96,7 @@
 			   </div>
 			</div>
 			<!-- 夏装推荐 -->
-			<div class="container-fluid pt-4 mt-3" id="summer">			
+			<div class="container-fluid pt-4 mt-3" id="summer" v-cloak>			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&夏装推荐&</h5>
@@ -121,7 +121,7 @@
 			   </div>
 			</div>
 			<!-- 秋装推荐 -->
-			<div class="container-fluid pt-4 mt-3" id="autumn">			
+			<div class="container-fluid pt-4 mt-3" id="autumn" v-cloak>			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&秋装推荐&</h5>
@@ -145,7 +145,7 @@
 			   </div>
 			</div>
 			<!-- 冬装推荐 -->
-			<div class="container-fluid pt-4 mt-3 pb-5" id="winter">			
+			<div class="container-fluid pt-4 mt-3 pb-5" id="winter" v-cloak>			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&冬装推荐&</h5>
