--- a/static/products_women.html
+++ b/static/products_women.html
@@ -19,7 +19,7 @@
 		</header>
 		<!-- 主体 -->
 		<hr  class="mt-0 line-pink">
-	    <div class="mid-content mb-3" id="details">
+	    <div class="mid-content mb-3" id="details" v-cloak>
 			<div class="row mb-5" >
 				<div class="col-xl-4 col-lg-5 text-center p-2">
 					<div id="mask" class="p-absolute d-none"></div>
@@ -85,7 +85,7 @@
 						<img src="img/products_detail/4.png" alt="" class="products_logo">&nbsp;退货补运费
 					</div>
 				</div>
-				<div  class="col-xl-2 remai_border mt-1" id="remai">
+				<div  class="col-xl-2 remai_border mt-1" id="remai" v-cloak>
 					<h6 class="text-muted text-center ">-热卖推荐-</h6>
 					<ul class="list-unstyled  text-center remai_small">
 						<li v-for='(item,i) in res'><a href="" target="_blank" :data-id='res[i].wid'><img :src="res[i].md1" alt="" class="remai_pic img-thumbnail"></a><p>￥{{res[i].price}}</p></li>						
@@ -116,7 +116,7 @@
 					</div>
 					<div class=" input-group pt-4 pb-2 pl-3 pr-3">
 						<input type="text" placeholder="更多好货" class="form-control search">
-						<a href="" class="search_btn pl-2 pr-2" style="background: #EF2F23;">店内搜索</a>
+						<input type="submit" class="search_btn pl-2 pr-2" style="background: #EF2F23;" value="店内搜索" id='inshopSub'>
 
 				    </div>				
 				</div>
@@ -173,14 +173,14 @@
 						<div class="tab-pane" id="comment">
 							<textarea name="" id="" cols="20" rows="5"placeholder="请亲在此评论~" class="w-100"></textarea>
 					    </div>
-						<div class="tab-pane" id="similar">
+						<div class="tab-pane" id="similar" v-cloak>
 							<h6 class="font-weight-bold p-2 pt-4 mb-0">本店同类商品</h6>
 							<div class="d-flex flex-wrap justify-content-around">
-								<div v-for='(item,i) in res'  class="pt-3 similar_item">
+								<div v-for='(item,i) in res'  class="mt-3 similar_item">
 									<a href="" target="_blank" :data-id='res[i].wid'>
 										<img :src="res[i].md1" alt=""class=" img-thumbnail">
 									
-									    <p  class="content_hide text-small pt-1 mb-0">{{res[i].tltle}}</p>
+									    <p  class="content_hide text-small pt-1 mb-0">{{res[i].title}}</p>
 								    </a>
 									￥{{res[i].price}}&nbsp;
 									<img src="img/products_detail/heart.png" alt="" >
@@ -190,12 +190,12 @@
 						</div>				
 					</div>
 				</div>
-				<div class="col-lg-3" id="haixianggou">
+				<div class="col-lg-3" id="haixianggou" v-cloak>
 					<div class="row text-center bg-f5">
 						<span class="font-weight-bold haixianggou_title">&购了还想购&</span>
 					</div>												
 					<div class="d-flex flex-wrap haixianggou justify-content-around pt-4">
-						<div v-for='(item,i) in res' class="pt-3 haixianggou_item">
+						<div v-for='(item,i) in res' class="mt-3 haixianggou_item">
 							<a href="" target="_blank" :data-id='res[i].wid'>
 								<img :src="res[i].md1" alt=""class=" img-thumbnail">							    
 								<p  class="content_hide text-small pt-1 mb-0">{{res[i].title}}    
