--- a/static/header.html
+++ b/static/header.html
@@ -3,7 +3,7 @@
 		<div class="row" style="background: #E6E1E1;">
 			<!-- logo -->
 			<div class="col-md-4 " >
-				<a href="index.html" target="_blank" class="header_top_name pl-5">纯纯购</a>
+				<a href="index.html"  class="header_top_name pl-5">纯纯购</a>
 			</div>
 			<!-- 搜索栏 -->
 			<div class="col-lg-4 col-md-12 input-group pt-2 pb-2">
@@ -15,7 +15,7 @@
 				<nav class="navbar navbar-expand-sm pr-0 pt-2">						
 					<div id="navgroup" class="">
 						<ul class="nav  flex-wrap " style="font-size: 0.7rem;" id="login">
-							<li class="nav-item"  v-if='!isLogin'><a href="user_login.html" class="nav-link header_top_a" target="_blank">登录</a></li>
+							<li class="nav-item"  v-if='!isLogin'><a href="user_login.html" class="nav-link header_top_a" >登录</a></li>
 							<li class="nav-item" v-else><a href="user_login.html" class="nav-link header_top_a" target="_blank" style="display: inline">{{uname}}</a><a href="#" @click.prevent="signout()" class="nav-link header_top_a" style="display: inline">退出</a></li>
 							<li class="nav-item"><a href="" class="nav-link header_top_a ">我的订单</a></li>
 							<li class="nav-item"><a href="" class="nav-link header_top_a ">购物车</a></li>
@@ -29,7 +29,7 @@
 	    <div class="header_body">
 	    	<nav class="pt-3 pl-3">
 				<ul class="list-inline d-flex mb-0">
-					<li class=""><a href="index.html" class="nav_a nav_active" target="_blank">首页</a></li>
+					<li class=""><a href="index.html" class="nav_a nav_active" >首页</a></li>
 					
 					<li class=""><a href="products_list.html" class="nav_a" target="_blank" data-type='spring'>春装</a></li>
 					
