--- a/static/user_login.html
+++ b/static/user_login.html
@@ -31,7 +31,7 @@
 					<input type="button" value="登录"  class="form-control login_input text-white mt-3" style="background: #FF5670;" id="sub" @click='login()'>
 				</form>					
 				<div class="w-75 pt-3 d-flex justify-content-end" style="margin: 0px auto;">
-					<a href="user_register.html" target="_blank" class="text-muted  login_input w-25">注册</a>
+					<a href="user_register.html"  class="text-muted  login_input w-25">注册</a>
 					<a href="" class="text-muted login_input">忘记密码</a>	
 				</div>					 				
 		    </div>
