--- a/static/user_login.html
+++ b/static/user_login.html
@@ -9,6 +9,8 @@
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<!-- myself_css -->
+		<link rel="stylesheet" href="css/sweetalert.css">
+		<script src="js/sweetalert.min.js"></script>
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/user_login.css">
 	</head>
