--- a/static/user_register.html
+++ b/static/user_register.html
@@ -9,6 +9,8 @@
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<!-- myself_css -->
+		<link rel="stylesheet" href="css/sweetalert.css">
+		<script src="js/sweetalert.min.js"></script>
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/user_register.css">
 	</head>
@@ -52,6 +54,9 @@
 		
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<!-- <script src="js/vue.js"></script> -->
+		<!-- <script src="js/axios.min.js"></script> -->
+		<!-- <script src="js/qs.min.js"></script> -->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/popper.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
