--- a/static/products_list.html
+++ b/static/products_list.html
@@ -11,6 +11,8 @@
 		<!-- myself_css -->
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/products_list.css">
+		<script src="js/sweetalert.min.js"></script>
+		<link rel="stylesheet" href="css/sweetalert.css">
 
 	</head>
 	<body style="">
@@ -19,8 +21,8 @@
 		</header>
 		<!-- 主体 -->
 		<hr class="mt-0 line-pink">
-		<div class="container-fluid mb-2" style="width: 80%" id="pros">			
-			<div class="row m-0 pb-3 d-flex justify-content-around" >				
+		<div class="container-fluid mb-2" style="width: 80%" id="pros" v-cloak>			
+			<div class="row m-0 pb-3 d-flex justify-content-around" v-if='res.length'>				
 				<div v-for='(item,i) in res' class="mt-3 list-item" >
 					<a href="" target="_blank" :data-id='res[i].wid' @click.prevent='item_click(res[i].wid)'>
 						<img :src="res[i].md1" alt=""class=" img-thumbnail">
@@ -31,7 +33,8 @@
 					<img src="img/products_detail/heart.png" alt="" >
 					&nbsp;566
 				</div> 				
-			</div>						
+			</div>
+			<div v-else>没有搜索到相关商品。。。。。T.T</div>						
 			<div class="title p-2 ">				
 				<ul class="pagination mb-0 justify-content-end">
 					<li class="page-item  page" :class="{disabled:cur<=1}" @click.prevent='pre_click()'>
